# bazel-external-data

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  external_data.bzl
bazel_external_data/: BUILD.bazel
bazel_external_data/backends/: BUILD.bazel  __init__.py  http.py  s3.py
bazel_external_data/backends/test/: s3_test.py
test/: external_data_workspace_test.bzl  external_data_workspace_test.sh  workspace_test.bzl  workspace_test.sh
test/external_data_pkg_test/: .bazelrc  BUILD.bazel  WORKSPACE  test_basics.py
test/external_data_pkg_test/data/: BUILD.bazel
